Finish managemnt pages
